fix positioning of planner aside on small screens

--- a/client/src/components/PlannerAside/plannerAside.css
+++ b/client/src/components/PlannerAside/plannerAside.css
@@ -85,9 +85,9 @@ h6 {
   .planner-side {
     background: unset;
     height: unset;
-    position: fixed;
-    left: 2rem;
-    top: 6.5rem;
+    position: relative;
+    margin-left: 2rem;
+    top: 5.3rem;
     width: unset;
     padding: 0;
     z-index: 20;
